# swagger_output.json
@@ -19,6 +19,18 @@
     {
       "name": "Type",
       "description": "植物類型設定"
+    },
+    {
+      "name": "Note",
+      "description": "筆記管理"
+    },
+    {
+      "name": "Article",
+      "description": "文章管理"
+    },
+    {
+      "name": "Picture",
+      "description": "照片管理"
     }
   ],
   "schemes": [
@@ -393,6 +405,84 @@
           },
           "403": {
             "description": "Forbidden"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/note/": {
+      "get": {
+        "tags": [
+          "Note"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "query",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/article/": {
+      "get": {
+        "tags": [
+          "Article"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "query",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/picture/": {
+      "get": {
+        "tags": [
+          "Picture"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "query",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
           },
           "500": {
             "description": "Internal Server Error"
